--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" type="text/css" href="=Stylesheet1.css">
 <head>
  <title> Code yer shirt</title>
  </head>
  <body>
  
+ This is the holding page for what will be a brilliant website 
  </body>
+
